# cross-platform-llm-client

./: .firebaserc  .gitignore  README.md  find_cache.dart  pubspec.yaml  setup.sh
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: chat_controller.dart  cloud_model_controller.dart  home_controller.dart  model_controller.dart  server_controller.dart  settings_controller.dart  task_controller.dart
lib/core/: colors.dart  constants.dart  theme.dart
lib/models/: ai_model.dart  chat_message.dart
lib/services/: app_log_service.dart  cloud_service.dart  device_info_native.dart  device_info_service.dart  device_info_web.dart  download_native.dart  download_service.dart  download_web.dart  inference_android.dart  inference_service.dart  inference_stub.dart  local_image_service.dart
lib/views/: chat_view.dart  home_view.dart  log_view.dart  model_view.dart  server_view.dart  settings_view.dart  task_view.dart
lib/widgets/: attachment_preview.dart  chat_bubble.dart  thought_disclosure.dart  typing_indicator.dart
local_plugins/: .gitignore
local_plugins/llama_flutter_android/android/: CMakeLists.txt  build.gradle.kts
local_plugins/sd_flutter_android/android/: CMakeLists.txt  build.gradle
local_plugins/sd_flutter_android/android/cmake/: FindVulkan.cmake
local_plugins/sd_flutter_android/android/src/main/cpp/: sd_jni_wrapper.cpp
local_plugins/sd_flutter_android/android/src/main/kotlin/com/example/sd_flutter_android/: SdFlutterAndroidPlugin.kt
test/: widget_test.dart
(+25 files in other folders)
